--- a/src/components/Admin/Dashboard/index.module.scss
+++ b/src/components/Admin/Dashboard/index.module.scss
@@ -16,6 +16,7 @@
   position: absolute;
   right: 0px;
   top: 0px;
+  z-index: -1;
   transform: translateY(-40%);
   font-size: 220px;
   font-weight: var(--font-light);
